--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^0.13.2"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.5",
     "grunt-browserify": "^3.7.0",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.1",
